modify folder structure create create week projections

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ ATLAS_URL=<DATABASEURI>
 DB_NAME=<DATABASE_NAME>
 COLLECTION_NAME=<DATABASE_COLLECTION_NAME>
 COUNTRIES_URL=<COVID19_API_URL>
+HISTORY_URL=<COVID19_HISTORICAL_DATA_API>
